[workspace]
resolver="2"
members = [
    "crates/factory_sim",
    "crates/factory_dbg"
]

[workspace.lints.clippy]
all                            = "warn" 
pedantic                       = "warn"
alloc_instead_of_core          = "warn"
as_underscore                  = "warn"
clone_on_ref_ptr               = "warn"
create_dir                     = "warn"
empty_structs_with_brackets    = "warn"
error_impl_error               = "warn"
exit                           = "warn"
filetype_is_file               = "warn"
fn_to_numeric_cast_any         = "warn"
format_push_string             = "warn"
if_then_some_else_none         = "warn"
mixed_read_write_in_expression = "warn"
panic_in_result_fn             = "warn"
partial_pub_fields             = "warn"
unseparated_literal_suffix     = "warn"
std_instead_of_core            = "warn"
str_to_string                  = "warn"
string_to_string               = "warn"
tests_outside_test_module      = "warn"
undocumented_unsafe_blocks     = "warn"
unnecessary_safety_comment     = "warn"
unnecessary_safety_doc         = "warn"
unwrap_in_result               = "warn"
missing_const_for_fn           = "warn"
missing_docs_in_private_items  = "allow"
module_name_repetitions        = "allow"
cast_possible_truncation       = "allow"
cast_lossless                  = "allow"
cast_sign_loss                 = "allow"
cast_precision_loss            = "allow"
cast_possible_wrap             = "allow"
missing_errors_doc             = "allow"
needless_pass_by_value         = "allow"
shadow_unrelated               = "allow"       

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
